Bug 445666 - Activation is slow
Summary: Activation is slow
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-17 23:26 UTC by Nate Graham
Modified: 2021-11-19 10:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2021-11-17 23:26:51 UTC
This is separate from 445665.

Once the effect is activated, there is a perceptible lag before windows actually start moving It's like 100-200 ms most of the time, but the delay gets worse if the CPU is under heavy load. By contrast, Present Windows always activates instantly for me, irrespective of CPU load.
Comment 1 Nate Graham 2021-11-18 17:00:07 UTC
Will be fixed with https://invent.kde.org/plasma/kwin/-/merge_requests/1686.
Comment 2 Vlad Zahorodnii 2021-11-19 10:53:09 UTC
Git commit 379ae2d5c258cc6610eec107413e1c3074a32a36 by Vlad Zahorodnii.
Committed on 19/11/2021 at 10:52.
Pushed by vladz into branch 'master'.

effects/overview: Reuse qml loading results between effect activations

Currently, every time you launch the overview effect, QtQuick will go
out and parse QML files. With the overview effect gaining more features
and the code size getting bigger, it takes more time for the overview to
present the first frame after it got triggered.

With this change, the overview effect will keep the ScreenView
QQmlComponent object around that can be used to avoid reparsing qml code
every time the overview effect is launched.

It also ports the Overview effect from de-facto deprecated qml context
to initial properties, which yield slightly better startup times.

M  +1    -0    src/effects/CMakeLists.txt
M  +40   -9    src/effects/overview/overvieweffect.cpp
M  +11   -2    src/effects/overview/overvieweffect.h
M  +3    -0    src/effects/overview/qml/ScreenView.qml

https://invent.kde.org/plasma/kwin/commit/379ae2d5c258cc6610eec107413e1c3074a32a36