src/effects/overview/qml/ScreenView.qml
@@ -16,6 +16,9 @@ FocusScope {
     id: container
     focus: true
 
+    required property QtObject effect
+    required property QtObject targetScreen
+
     readonly property bool lightBackground: Math.max(PlasmaCore.ColorScope.backgroundColor.r,
                                                      PlasmaCore.ColorScope.backgroundColor.g,
                                                      PlasmaCore.ColorScope.backgroundColor.b) > 0.5
